--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -1431,18 +1431,6 @@ year = {2008}
     issn = {10980121}
 }
 
-@article{Picozzi2014,
-    title = {{Ferroelectric Rashba semiconductors as a novel class of multifunctional materials}},
-    year = {2014},
-    journal = {Frontiers in Physics},
-    author = {Picozzi, Silvia},
-    pages = {10},
-    volume = {2},
-    url = {http://journal.frontiersin.org/article/10.3389/fphy.2014.00010/abstract},
-    doi = {10.3389/fphy.2014.00010},
-    issn = {2296-424X},
-    keywords = {Electronic Structure Theory, Ferroelectricity, GeTe, Rashba effect, Spin-orbit coupling, semiconductor spintronics.}
-}
 
 @article{Jackeli2009,
     title = {{Mott insulators in the strong spin-orbit coupling Limit: From Heisenberg to a Quantum Compass and Kitaev Models}},
@@ -2581,20 +2569,6 @@ year = {2008}
     pmid = {21715941}
 }
 
-@article{Nunez2011AntiferromagneticSpintronics,
-    title = {{Antiferromagnetic Metal Spintronics}},
-    year = {2011},
-    author = {Nunez, A. S. and Duine, R. A. and MacDonald, A. H.},
-    pages = {3098--3114},
-    url = {http://arxiv.org/abs/cond-mat/0510797},
-    isbn = {1364-503X (Print){\textbackslash}r1364-503X (Linking)},
-    doi = {10.1098/rsta.2011.0014},
-    issn = {1364-503X},
-    pmid = {21727116},
-    arxivId = {cond-mat/0510797},
-    keywords = {antiferromagnets, giant magnetoresistance, spin-transfer torque, spintronics}
-}
-
 @article{Ralph2008SpinTorques,
     title = {{Spin transfer torques}},
     year = {2008},
@@ -3071,5 +3045,58 @@ pages = {1353--1366},
 title = {{Domain wall diffusion and domain wall softening}},
 volume = {15},
 year = {2003}
+}
+
+@article{Nunez2011,
+abstract = {Spintronics in ferromagnetic metals is built on a complementary set of phenomena in which magnetic configurations influence transport coefficients and transport currents alter magnetic configurations. In this Letter we propose that corresponding effects occur in circuits containing antiferromagnetic metals. The critical current for switching can be smaller in the antiferromagnetic case because of the absence of shape anisotropy and because spin torques act through the entire volume of an antiferromagnet. Our findings suggest that current-induced order parameter dynamics can be used to coarsen the microstructure of antiferromagnetic thin films.},
+archivePrefix = {arXiv},
+arxivId = {cond-mat/0510797},
+author = {Nunez, A. S. and Duine, R. A. and MacDonald, A. H.},
+doi = {10.1098/rsta.2011.0014},
+eprint = {0510797},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Nunez, Duine, MacDonald - 2011 - Antiferromagnetic Metal Spintronics.pdf:pdf},
+isbn = {1364-503X (Print)$\backslash$r1364-503X (Linking)},
+issn = {1364-503X},
+keywords = {antiferromagnets,giant magnetoresistance,spin-transfer torque,spintronics},
+mendeley-groups = {Spintronics/Antiferromagnetic},
+pages = {3098--3114},
+pmid = {21727116},
+primaryClass = {cond-mat},
+title = {{Antiferromagnetic Metal Spintronics}},
+url = {http://arxiv.org/abs/cond-mat/0510797},
+year = {2011}
+}
+@article{Joshi2016,
+abstract = {Spintronics is a new field of research exploiting the influence of electron spin on the electrical conduction (or current is spin dependent). The major problem is the realization and fabrication of spintronics based devices. To meet the objective scientific community is developing the novel kind of materials that relies on magnetism instead of flow of current through electron. This paper illustrates and reviews one of the emerging technologies known as spintronics by putting few low power computing techniques altogether based on spintronics to provide a basic and meaningful understanding to the reader. The challenges of spintronics devices that has to meet for the success of electronics future are summarized.},
+author = {Joshi, Vinod Kumar},
+doi = {10.1016/j.jestch.2016.05.002},
+file = {:home/ponet/Downloads/1-s2.0-S2215098615300501-main.pdf:pdf},
+issn = {22150986},
+journal = {Engineering Science and Technology, an International Journal},
+keywords = {FTJ,GMR,MTJ,Spin valve,Spin-FET,Spin-MOSFET},
+number = {3},
+pages = {1503--1513},
+publisher = {Karabuk University},
+title = {{Spintronics: A contemporary review of emerging electronics devices}},
+url = {http://dx.doi.org/10.1016/j.jestch.2016.05.002},
+volume = {19},
+year = {2016}
+}
+
+@article{Picozzi2014,
+abstract = {The discovery of novel properties, effects or microscopic mechanisms in modern materials science is often driven by the quest for combining, into a single compound, several functionalities: not only the juxtaposition of the latter functionalities, but especially their coupling, can open new horizons in basic condensed matter physics as well as in technology. Semiconductor spintronics makes no exception. In this context, we have discovered by means of density-functional simulations that, when a sizeable spin-orbit coupling is combined with ferroelectricity, such as in GeTe, one obtains novel multifunctional materials - called Ferro-Electric Rashba Semi-Conductors (FERSC) - where, thanks to a giant Rashba spin-splitting, the spin texture is controllable and switchable via an electric field. This peculiar spin-electric coupling can find a natural playground in small-gap insulators, such as chalcogenides, and can bring brand new assets into the field of electrically-controlled semiconductor spintronics.},
+annote = {NULL},
+author = {Picozzi, Silvia},
+doi = {10.3389/fphy.2014.00010},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Picozzi - 2014 - Ferroelectric Rashba semiconductors as a novel class of multifunctional materials.pdf:pdf},
+issn = {2296-424X},
+journal = {Frontiers in Physics},
+keywords = {Electronic Structure Theory,Ferroelectricity,GeTe,Rashba effect,Spin-orbit coupling,semiconductor spintronics.},
+mendeley-groups = {PhD,PhD/GeTe},
+pages = {10},
+title = {{Ferroelectric Rashba semiconductors as a novel class of multifunctional materials}},
+url = {http://journal.frontiersin.org/article/10.3389/fphy.2014.00010/abstract},
+volume = {2},
+year = {2014}
 }
 
