--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -1,34 +1,3 @@
-
-\newcommand{\Wan}[2]{w_{#1}^{\bm{#2}}}
-\newcommand{\tildeWan}[2]{\tilde{w}_{#1}^{\bm{#2}}}
-\newcommand{\WanKet}[2]{\Ket{\Wan{#1}{#2}(\bm{r})}}
-\newcommand{\tildeWanKet}[2]{\Ket{\tildeWan{#1}{#2}(\bm{r})}}
-\newcommand{\ShortWanKet}[2]{\Ket{\Wan{#1}{#2}}}
-\newcommand{\tildeShortWanKet}[2]{\Ket{\tildeWan{#1}{#2}}}
-\newcommand{\WanBra}[2]{\Bra{\Wan{#1}{#2}(\bm{r})}}
-\newcommand{\tildeWanBra}[2]{\Bra{\tildeWan{#1}{#2}(\bm{r})}}
-\newcommand{\ShortWanBra}[2]{\Bra{\Wan{#1}{#2}}}
-\newcommand{\tildeShortWanBra}[2]{\Bra{\tildeWan{#1}{#2}}}
-
-\newcommand{\Bloch}[1]{\psi_{#1}^{\bm{k}}(\bm{r})}
-\newcommand{\tildeBloch}[1]{\tilde{\psi}_{#1}^{\bm{k}}(\bm{r})}
-
-\newcommand{\BlochKet}[1]{\Ket{\Bloch{#1}}}
-\newcommand{\tildeBlochKet}[1]{\Ket{\tildeBloch{#1}}}
-\newcommand{\BlochBra}[1]{\Bra{\Bloch{#1}}}
-\newcommand{\tildeBlochBra}[1]{\Bra{\tildeBloch{#1}}}
-
-\newcommand{\unkr}[2]{u_{#1}^{\bm{#2}}(\bm{r})}
-\newcommand{\unk}[2]{u_{#1}^{\bm{#2}}}
-
-\newcommand{\unkrBra}[2]{\Bra{\unkr{#1}{#2}}}
-\newcommand{\unkrKet}[2]{\Ket{\unkr{#1}{#2}}}
-\newcommand{\unkBra}[2]{\Bra{\unk{#1}{#2}}}
-\newcommand{\unkKet}[2]{\Ket{\unk{#1}{#2}}}
-
-\newcommand{\inveikr}[1]{e^{-i \bm{k}\cdot \bm{#1}}}
-\newcommand{\eikr}[1]{e^{i \bm{k}\cdot \bm{#1}}}
-
 \chapter{Theory}
 \section{Spin-orbit coupling}
 \section{Wannier Functions}
@@ -46,13 +15,14 @@ The second is to extract these orbitals, and parameters from a first-principles 
 In thesis we favor the latter since it is more flexible, not depending on experiments while still providing quantitative results.
 This also allows for an easy comparison of multiple materials in order to better understand how certain physics manifest themselves in different cases. 
 
-The main question to answer then becomes how to define a such a set of localized orbitals, when most simulations for periodic systems handle extended BFs $\Ket{\psi^{\bm{k}}(\bm{r})} = \eikr{r} u^{\bm{k}}(\bm{r})$, where $\bm{k}$ denotes a wavevector in the first Brillouin zone (BZ), $\eikr{r}$ the plane wave envelope function, and $u^{\bm{k}}(\bm{r})$ the cell-periodic part (see the left panel of Fig.~\ref{fig:Theory_blochvswan}(a)).
+The main question to answer then becomes how to define a such a set of localized orbitals, when most simulations for periodic systems handle extended BFs $\Ket{\psi^{\bm{k}}(\bm{r})} = \eikr{r} u^{\bm{k}}(\bm{r})$, where $\bm{k}$ denotes a wavevector in the first Brillouin zone (BZ), $\eikr{r}$ the plane wave envelope function, and $\Ket{\unkr{n}{k}}$ the cell-periodic part (see the left panel of Fig.~\ref{fig:Theory_blochvswan}(a)).
+From her on out, we omit the $\bm{r}$ in the wavefunctions and inner products are assumed to be an integration over all space.
 There are many ways to do this, but the most natural one in this case is that of the Wannier functions (WFs) \cite{Wannier1937}.
 
 We will here give a short recap of the excellent review done by Marzari et. al. \cite{Marzari2012}, starting with the most clear case of a single isolated band $n$ with BFs $\BlochKet{n}$ (see red window in Fig.~\ref{fig:Theory_blochvswan}(b)), where the BF can be written as a straightforward discrete Fourier transform of the WF: 
 \begin{equation}
 	\label{eq:Theory_1bandwan}
-	\BlochKet{n} = \eikr{r} \unkrKet{n}{k} = \sum_{\bm{R}} \eikr{R} \WanKet{n}{R},
+	\BlochKet{n} = \eikr{r} \unkKet{n}{k} = \sum_{\bm{R}} \eikr{R} \WanKet{n}{R},
 \end{equation}
 with $\unkrKet{n}{k}$ the periodic part of the BF, $\WanKet{n}{R}$ the localized WF centered in the unit cell defined by lattice vector $\bm{R}$, and $n$ the band index.
 The comparison between BFs and WFs is made in Fig.~\ref{fig:Theory_blochvswan}.
@@ -76,7 +46,7 @@ The inverse Fourier transform over the BF in the first Brillouin Zone (BZ) can t
 	\WanKet{n}{R} = \frac{V}{(2\pi)^3} \int_{BZ} d \bm{k} \inveikr{R} \BlochKet{n},
 \end{equation}
 where $V$ denotes the real-space volume of the unit cell.
-In these and following equations, the normalization convention is used such that $\int_V d\bm{r}\BraKet{\Bloch{n}} = 1$.
+In these and following equations, the normalization convention is used such that $\int_V d\bm{r}\BraKet{\Blochr{n}} = 1$.
 As can be seen from the right panel in Fig.~\ref{fig:Theory_blochvswan}, WFs centered in different unit cells are shifted copies of one another.
 
 One of the most useful properties of the WFs lies in the realization that, through the gauge freedom at each $\bm{k}$ of the BF\footnote{The solution to Schr\"odinger equation does not determine uniquely its phase.}, the shape of the WFs is not unique:
@@ -102,22 +72,22 @@ Indeed, in Eq.~\ref{eq:Theory_wanfourier}, only then will there be a cancellatio
 It is thus important to choose a gauge at each $k$-point such that the rotated wavefunctions $\tildeBlochKet{n}$ vary as smoothly as possible, which will ultimately lead to the WFs that are as localized as possible\footnote{It can be proved that these WFs will be exponentially localized in the case of normal insulators.}. 
 The localization functional can be written down as
 \begin{equation}
-	\Omega =\sum_n \ShortWanBra{n}{0}r^2\ShortWanKet{n}{0} - \left|\ShortWanBra{n}{0}\bm{r}\ShortWanKet{n}{0}\right|^2.
+	\Omega =\sum_n \WanBra{n}{0}r^2\WanKet{n}{0} - \left|\WanBra{n}{0}\bm{r}\WanKet{n}{0}\right|^2.
 \end{equation}
 This can be split up into a gauge-invariant and gauge-dependent part
 \begin{align}
 	\Omega &= \Omega_I + \tilde\Omega,  \\
-	\Omega_I &= \sum_n \left[\ShortWanBra{n}{0} r^2 \ShortWanKet{n}{0} - \sum_{m,\bm{R}} \left| \ShortWanBra{m}{R} \bm{r} \ShortWanKet{n}{0}\right|^2\right] \label{eq:Theory_omegaI}\\
-	\tilde\Omega &= \sum_n \sum_{m,\bm{R} \neq n,\bm{0}} \left|\ShortWanBra{m}{R} \bm{r} \ShortWanKet{n}{0}\right|^2.
+	\Omega_I &= \sum_n \left[\WanBra{n}{0} r^2 \WanKet{n}{0} - \sum_{m,\bm{R}} \left| \WanBra{m}{R} \bm{r} \WanKet{n}{0}\right|^2\right] \label{eq:Theory_omegaI}\\
+	\tilde\Omega &= \sum_n \sum_{m,\bm{R} \neq n,\bm{0}} \left|\WanBra{m}{R} \bm{r} \WanKet{n}{0}\right|^2.
 \end{align}
 For a set of isolated bands it thus suffices to minimize the gauge-dependent part in order to find the  unique set of maximally localized Wannier functions (MLFW) that consitute these bands\cite{Kunes2004, Marzari2012}.
 We can write down the position dependent operators in reciprocal space as\cite{Blount1962}
 \begin{equation}
-\ShortWanBra{n}{R}\bm{r}\ShortWanKet{m}{0} = i \frac{V}{(2\pi)^3}\int d\bm{k} \eikr{R}\unkBra{n}{k} \bm{\nabla}_{\bm{k}} \unkKet{m}{k}
+\WanBra{n}{R}\bm{r}\WanKet{m}{0} = i \frac{V}{(2\pi)^3}\int d\bm{k} \eikr{R}\unkBra{n}{k} \bm{\nabla}_{\bm{k}} \unkKet{m}{k}
 \end{equation}
 and
 \begin{equation}
-\ShortWanBra{n}{R}r^2\ShortWanKet{m}{0} = -\frac{V}{(2\pi)^3}\int d\bm{k} \eikr{R}\unkBra{n}{k} \bm{\nabla}_{\bm{k}}^2 \unkKet{m}{k}.
+\WanBra{n}{R}r^2\WanKet{m}{0} = -\frac{V}{(2\pi)^3}\int d\bm{k} \eikr{R}\unkBra{n}{k} \bm{\nabla}_{\bm{k}}^2 \unkKet{m}{k}.
 \end{equation}
 By then minimizing $\tilde\Omega$ in terms of different gauge transformations $U_{nm}^{\bm{k}}$ applied to the $\unkKet{n}{k}$, we can find a set of MLFW. 
 
@@ -176,9 +146,9 @@ This efficient interpolation is one of the great advantages of using this techni
 
 The main quantity we will use this interpolation for is the Hamiltonian:
 \begin{equation}
-	\tilde{H}_{nm}^{\bm{k}} = \tildeBlochBra{n} H \tildeBlochKet{m} = \sum_{\bm{R}} \eikr{R} \ShortWanBra{n}{0}H\ShortWanKet{n}{R},
+	\tilde{H}_{nm}^{\bm{k}} = \tildeBlochBra{n} H \tildeBlochKet{m} = \sum_{\bm{R}} \eikr{R} \WanBra{n}{0}H\WanKet{n}{R},
 \end{equation}
-where the tilde is used to distinguish the $k$-space wavefunctions from BFs, and $\ShortWanKet{n}{R}$ denote the WFs centered at unit cell identified by lattice translation $\bm{R}$.
+where the tilde is used to distinguish the $k$-space wavefunctions from BFs, and $\WanKet{n}{R}$ denote the WFs centered at unit cell identified by lattice translation $\bm{R}$.
 To recover the bandstructure from this Hamiltonian can then be diagonalized by unitary transformations $W^{\bm{k}}$ such that
 \begin{equation}
 H_{nm}^{\bm{k}} = [W^{\bm{k}\dagger} \tilde{H}_{nm}^{\bm{k}} W^{\bm{k}}]_{nm} = \delta_{nm} \varepsilon_{n}^{\bm{k}}.
