--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -134,7 +134,7 @@ We utilize both theoretical and computational tools to understand the nature of 
 \tableofcontents
 
 % \Include{Introduction}
-\Include{Theory}
+% \Include{Theory}
 \Include{Rashba}
 % \Include{Cr}
 % \Include{GdMn2O5}
